--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,11 @@ body, a:link, a:visited, a:active{
   padding:5px 12px;
   float:right;
 }
-
+.sprite{
+  border:10px solid blueviolet;
+  border-radius:10px;
+  position:absolute;
+}
 .topbar{
   height:5%;
   background-color: #555;
@@ -22,7 +26,7 @@ body, a:link, a:visited, a:active{
   background-color: #777;
 }
 .snake{
-  border:10px solid red;
+  border:10px solid blue;
   border-radius:10px;
   position:absolute;
 }
@@ -31,7 +35,6 @@ body, a:link, a:visited, a:active{
   border-radius:10px;
   position:absolute;
 }
-
 .gameBoard{
   height: 95%;
   margin: 0;
