--- a/styles.css
+++ b/styles.css
@@ -39,3 +39,22 @@ body, a:link, a:visited, a:active{
   height: 95%;
   margin: 0;
 }
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 95%;
+  overflow: auto;
+  background-color: rgba(85,85,85, 0.7);
+}
+
+.modal-content {
+  background-color: rgba(85,85,85, 1);
+  margin: 15% auto;
+  text-align: center;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
